--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<url>http://maven.apache.org</url>
 	
 	<properties>
-		<docker.image.prefix>kammana</docker.image.prefix>
+		//<docker.image.prefix>kammana</docker.image.prefix>
 		//<sonar.host.url>http://54.95.14.125:9000/</sonar.host.url>
 
 	</properties>
@@ -26,14 +26,14 @@
 	</dependencies>
 	
 	<distributionManagement>
-		 <snapshotRepository>
-		    <id>nexusRepo</id>
-		    <url>http://54.208.113.195:8081/repository/snapshot/</url>
-		 </snapshotRepository>
+		// <snapshotRepository>
+		   // <id>nexusRepo</id>
+		//    <url>http://54.208.113.195:8081/repository/snapshot/</url>
+		// </snapshotRepository>
 		
 		<repository>
-		    <id>nexusRepo</id>
-		    <url>http://54.208.113.195:8081/repository/Release/</url>
+		  //  <id>nexusRepo</id>
+		 //   <url>http://54.208.113.195:8081/repository/Release/</url>
 		</repository>
   	</distributionManagement>
 	
